[package]
name = "adam-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "adam"
path = "src/main.rs"

[lib]
name = "adam_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
adam-app-server = { workspace = true }
adam-app-server-protocol = { workspace = true }
adam-arg0 = { workspace = true }
adam-chatgpt = { workspace = true }
adam-cloud-tasks = { path = "../../integrations/cloud/cloud-tasks" }
adam-common = { workspace = true, features = ["cli"] }
adam-agent = { workspace = true }
adam-exec = { workspace = true }
adam-execpolicy = { workspace = true }
adam-login = { workspace = true }
adam-mcp-server = { workspace = true }
adam-protocol = { workspace = true }
adam-responses-api-proxy = { workspace = true }
adam-rmcp-client = { workspace = true }
adam-stdio-to-uds = { workspace = true }
adam-tui = { workspace = true }
libc = { workspace = true }
owo-colors = { workspace = true }
regex-lite = { workspace = true }
serde_json = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
toml = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
adam_windows_sandbox = { package = "adam-windows-sandbox", path = "../../platform/sandbox/windows" }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
adam-utils-cargo-bin = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
