[package]
edition.workspace = true
license.workspace = true
name = "codex-agent-core"
version.workspace = true

[lib]
doctest = false
name = "codex_agent_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
codex-async-utils = { workspace = true }
codex-llm = { workspace = true }
codex-protocol = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
