[package]
edition.workspace = true
license.workspace = true
name = "adam-agent-core"
version.workspace = true

[lib]
doctest = false
name = "adam_agent_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
adam-async-utils = { workspace = true }
adam-llm = { workspace = true }
adam-llm-types = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
