[package]
edition.workspace = true
license.workspace = true
name = "lha-agent-core"
version.workspace = true

[lib]
doctest = false
name = "lha_agent_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
lha-async-utils = { workspace = true }
lha-llm = { workspace = true }
lha-llm-types = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
