[package]
edition.workspace = true
license.workspace = true
name = "codex-agent-runtime"
version.workspace = true

[lib]
doctest = false
name = "codex_agent_runtime"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-channel = { workspace = true }
async-trait = { workspace = true }
codex-agent-core = { workspace = true }
codex-llm = { workspace = true }
codex-llm-types = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-util = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
