[package]
edition.workspace = true
license.workspace = true
name = "adam-agent-runtime"
version.workspace = true

[lib]
doctest = false
name = "adam_agent_runtime"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-channel = { workspace = true }
async-trait = { workspace = true }
adam-agent-core = { workspace = true }
adam-llm = { workspace = true }
adam-llm-types = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-util = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
