[package]
name = "adam-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "adam-app-server"
path = "src/main.rs"

[lib]
name = "adam_app_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
adam-arg0 = { workspace = true }
adam-cloud-requirements = { workspace = true }
adam-common = { workspace = true, features = ["cli"] }
adam-agent = { workspace = true }
adam-llm = { workspace = true }
adam-backend-client = { workspace = true }
adam-file-search = { workspace = true }
adam-chatgpt = { workspace = true }
adam-login = { workspace = true }
adam-protocol = { workspace = true }
adam-app-server-protocol = { workspace = true }
adam-feedback = { workspace = true }
adam-rmcp-client = { workspace = true }
adam-utils-absolute-path = { workspace = true }
adam-utils-json-to-toml = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
mcp-types = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
app_test_support = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
base64 = { workspace = true }
adam-execpolicy = { workspace = true }
core_test_support = { workspace = true }
mcp-types = { workspace = true }
os_info = { workspace = true }
pretty_assertions = { workspace = true }
rmcp = { workspace = true, default-features = false, features = [
    "server",
    "transport-streamable-http-server",
] }
serial_test = { workspace = true }
wiremock = { workspace = true }
shlex = { workspace = true }
