[package]
name = "lha-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lha-app-server"
path = "src/main.rs"

[lib]
name = "lha_app_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
lha-arg0 = { workspace = true }
lha-common = { workspace = true, features = ["cli"] }
lha-agent = { workspace = true }
lha-llm = { workspace = true }
lha-file-search = { workspace = true }
lha-protocol = { workspace = true }
lha-app-server-protocol = { workspace = true }
lha-feedback = { workspace = true }
lha-rmcp-client = { workspace = true }
lha-utils-absolute-path = { workspace = true }
lha-utils-json-to-toml = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
mcp-types = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
app_test_support = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
base64 = { workspace = true }
lha-execpolicy = { workspace = true }
core_test_support = { workspace = true }
mcp-types = { workspace = true }
os_info = { workspace = true }
pretty_assertions = { workspace = true }
rmcp = { workspace = true, default-features = false, features = [
    "server",
    "transport-streamable-http-server",
] }
serial_test = { workspace = true }
wiremock = { workspace = true }
shlex = { workspace = true }
