[package]
name = "adam-backend-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
adam-backend-openapi-models = { path = "../../resources/codex-backend-openapi-models" }
adam-protocol = { workspace = true }
adam-agent = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
