[package]
name = "lha-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lha-mcp-server"
path = "src/main.rs"

[lib]
name = "lha_mcp_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
lha-arg0 = { workspace = true }
lha-common = { workspace = true, features = ["cli"] }
lha-agent = { workspace = true }
lha-protocol = { workspace = true }
lha-utils-json-to-toml = { workspace = true }
mcp-types = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
core_test_support = { workspace = true }
mcp_test_support = { workspace = true }
os_info = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
