[package]
name = "adam-llm-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "adam_llm_types"
path = "src/lib.rs"

[dependencies]
adam-git = { workspace = true }
mcp-types = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true, features = ["serde-json-impl", "no-serde-warnings"] }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
