[package]
name = "adam-exec"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "adam-exec"
path = "src/main.rs"

[lib]
name = "adam_exec"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
adam-arg0 = { workspace = true }
adam-common = { workspace = true, features = [
    "cli",
    "elapsed",
    "sandbox_summary",
] }
adam-agent = { workspace = true }
adam-llm = { workspace = true }
adam-protocol = { workspace = true }
adam-utils-absolute-path = { workspace = true }
mcp-types = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ts-rs = { workspace = true, features = [
    "uuid-impl",
    "serde-json-impl",
    "no-serde-warnings",
] }
uuid = { workspace = true }


[dev-dependencies]
assert_cmd = { workspace = true }
adam-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
libc = { workspace = true }
mcp-types = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
wiremock = { workspace = true }
