[package]
name = "lha-arg0"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "lha_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
lha-apply-patch = { workspace = true }
lha-agent = { workspace = true }
lha-linux-sandbox = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
