[package]
name = "lha-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "lha_secrets"
path = "src/lib.rs"
doctest = false

[dependencies]
regex = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
