[package]
name = "lha-memories-read"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "lha_memories_read"
path = "src/lib.rs"
doctest = false

[dependencies]
lha-protocol = { workspace = true }
lha-utils-absolute-path = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
