[package]
name = "lha-memories-write"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "lha_memories_write"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
lha-git = { workspace = true }
lha-protocol = { workspace = true }
lha-state = { workspace = true }
lha-utils-absolute-path = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt", "time"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "v7"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
