[package]
name = "adam-cloud-tasks"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "adam_cloud_tasks"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
adam-cloud-tasks-client = { path = "../cloud-tasks-client", features = [
    "mock",
    "online",
] }
adam-common = { path = "../../../shared/common", features = ["cli"] }
adam-agent = { package = "adam-coding-agent", path = "../../../coding-agent/runtime" }
adam-login = { path = "../../../coding-agent/login" }
adam-tui = { path = "../../../tui/app" }
crossterm = { workspace = true, features = ["event-stream"] }
ratatui = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
unicode-width = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
supports-color = { workspace = true }

[dependencies.async-trait]
workspace = true

[dev-dependencies]
async-trait = { workspace = true }
pretty_assertions = { workspace = true }
