[package]
name = "lha-stdio-to-uds"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lha-stdio-to-uds"
path = "src/main.rs"

[lib]
name = "lha_stdio_to_uds"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
uds_windows = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
lha-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
